# SE3-TCP-Interface

./: README.md
se3_tcp_interface/: README (1).md  README (2).md  README.md
se3_tcp_interface/ros2_controllers_cartesian/: CMakeLists.txt  cartesian_motion_controller_plugin.xml  package.xml
se3_tcp_interface/ros2_controllers_cartesian/include/ros2_controllers_cartesian/: cartesian_controller.hpp
se3_tcp_interface/ros2_controllers_cartesian/src/: cartesian_controller.cpp
se3_tcp_interface/se3_sensor_driver/: CMakeLists.txt  package.xml  se3_interface_plugin.xml
se3_tcp_interface/se3_sensor_driver/config/: se3_sensor.yaml
se3_tcp_interface/se3_sensor_driver/include/se3_sensor_driver/: hardware_interface.hpp  sensor_tcp_server.hpp
se3_tcp_interface/se3_sensor_driver/launch/: sensor.launch.py
se3_tcp_interface/se3_sensor_driver/rviz/: my_rviz.rviz
se3_tcp_interface/se3_sensor_driver/src/: hardware_interface.cpp  sensor_tcp_server.cpp  tcp_server_node.cpp
se3_tcp_interface/se3_sensor_driver/urdf/: se3_sensor.urdf.xacro  se3_sensor.xacro
se3_tcp_interface/ur5e_cartesian_control/: CMakeLists.txt  package.xml
se3_tcp_interface/ur5e_cartesian_control/config/: assignment9_controllers.yaml  assignment9_initial_positions.yaml
se3_tcp_interface/ur5e_cartesian_control/launch/: ur5e.launch.py
se3_tcp_interface/ur5e_cartesian_control/rviz/: my_rviz.rviz
se3_tcp_interface/ur5e_cartesian_control/urdf/: ur5_with_sensor.urdf.xacro
