<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>se3_sensor_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rrohan2@jh.edu">ritwik</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>ur_description</depend>
  <depend>ign_ros2_control</depend>
  <depend>ignition-gazebo6</depend>
  <depend>ignition-plugin</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ign_ros2_control plugin="${prefix}/se3_interface_plugin.xml"/>
  </export>
</package>
